updating our details

--- a/index.html
+++ b/index.html
@@ -17,17 +17,18 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I served 4 years in the US Army and currently sevring as a  <br>
+        Police Officer in the City and County of Denver, CO</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>Pittsburgh, PA</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>Motorcycles, Offroading,</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>Does anyone realy have an answer to that?</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>Denver, CO</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To provide technology to help improve society</p>
     </section>
 
     <footer id="footer">
